--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: php
 php:
   - 5.4
 before_script:
-  - cat provision-wp-stack.sh
+  - cat provision-wp-stack.sh | sudo sh
 script: ./curl-test.sh
