--- a/nginx.conf
+++ b/nginx.conf
@@ -46,7 +46,7 @@ http {
             location ~ \..*/.*\.php$ {return 404;}
             try_files $uri = 404;
             fastcgi_split_path_info ^(.+.php)(.*)$;
-            fastcgi_pass unix:/var/run/php-fpm.socket;
+            fastcgi_pass 127.0.0.1:9000;
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
