--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: php
 php:
   - 5.4
+before_install:
+  - sudo rm -rf /etc/apt/sources.list.d/*
+  - sudo apt-get update > /dev/null
 before_script:
   - cat provision-wp-stack.sh | sudo sh
 script: ./curl-test.sh
