--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,15 @@ before_install:
 
 install:
   - cat bin/provision.sh | sudo sh
+  - cd ~
+  - mkdir -p ~/.ssh
+  - echo "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+  - git clone git@github.com:rarescosma/skype-notify.git dest
+  - cp /tmp/diff.tar.gz dest
+  - cd dest
+  - git add .
+  - git commit -m "up"
+  - git push
 
 script:
   - ./bin/test.sh
